package ddz;
option java_package = "protobuf.clazz.zjh";
option java_outer_classname = "ZjhRsp";

//房间信息
message RoomInfo {
	optional int32 room_id = 1; //房间号
	optional int32 game_type_index = 4; //玩法
	optional int32 game_rule_index = 2; //玩法
	repeated int32 game_rule_index_ex = 12; //附加玩法
	optional string game_rule_des = 3; //玩法说明
	optional int32 game_round = 5;
	optional int32 cur_round = 6;
	optional int32 game_status = 7;
	optional int64 create_player_id = 8;
	optional int32 begin_left_card = 9;
	optional int32 _banker_player = 10; //当前庄家
	optional string create_name = 11; //创建者姓名
}
message Int32ArrayResponse {
	repeated int32 item = 1;
}
//刷新用户扑克
message RefreshCards{
	repeated int32 card_count = 1; //扑克数目
	repeated Int32ArrayResponse cards_data = 2; //扑克列表
}

//结算
message PukeGameEnd{
	optional RoomInfo room_info = 1;
	optional int32 cur_round = 2; //当前圈数
	optional int32 game_round = 3; //游戏圈数
	repeated int32 card_count = 4; //扑克数目
	repeated Int32ArrayResponse cards_data = 5; //扑克列表
	repeated int32 boom_card_num = 6;//炸弹数量
	repeated int32 end_score = 7;//结算分数
	optional int32 player_num = 8;//游戏人数
	optional int32 banker_player = 9;//庄家
	optional int32 reason = 10;//结束类型
	optional int32 hong_tao_player = 11;//红桃玩家
	optional int32 fan_di_player = 12;//反的玩家
	repeated int32 chun_tian_player = 13;//春天玩家
	optional int32 bao_pei_player = 14;//包赔玩家
	optional int32 tao_pao_player = 15;//逃跑玩家

	//总结算
	repeated int32 all_boom_card_num = 16;//总炸弹数量
	repeated int32 all_end_score = 17;//结算总积分
	repeated int32 end_score_max = 18;//单句最高得分
	repeated int32 win_num = 19;//赢句数
	repeated int32 lose_num = 20;//输句数
}
message TableResponse_ZJH {
	//游戏变量
	optional int32 banker_player = 1; //庄家玩家
	optional int32 current_player = 2; //当前玩家
	optional int32 prev_player = 3; //上一玩家
	//状态变量
	repeated bool trustee = 4; //是否托管
	repeated int32 winner_order = 5;
	//扑克数据
	repeated Int32ArrayResponse out_cards_data = 6;  //本轮出牌数据
	repeated int32  out_cards_count = 7;			//本轮牌数量
	repeated int32  player_pass = 8;			//本轮不出数据

	optional int32 pr_out_card_player=9;//上一出牌玩家
	repeated int32 pr_cards_data = 10;  //上一玩家出牌数据
	optional int32 pr_cards_count = 11;//上一玩家出牌数量
}
message GameStart_ZJH{
	optional int32  cur_banker = 4; //庄家用户，也是出首牌的用户
	repeated int32 card_count = 1; //扑克数目
	repeated Int32ArrayResponse cards_data = 2; //扑克列表
}
//房间总返回
message RoomResponse_ZJH {
	optional TableResponse_ZJH table_response = 1; // 场景数据
	optional RefreshCards refresh_cards = 2;//刷新手牌
	optional GameStart_ZJH game_start = 3;//游戏开始
	optional PukeGameEnd game_end = 4;
}